# serializer version: 1
# name: test_climate_platform[climate.heat_pump_zone_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heat_pump_zone_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 1',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'atw-unit-uuid-1_zone_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_platform[climate.heat_pump_zone_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'friendly_name': 'Heat Pump Zone 1',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heat_pump_zone_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_platform[climate.heat_pump_zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.heat_pump_zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 2',
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': 'atw-unit-uuid-1_zone_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_platform[climate.heat_pump_zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 21.0,
      'friendly_name': 'Heat Pump Zone 2',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 385>,
      'temperature': 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.heat_pump_zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate_platform[climate.living_room_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'fan_modes': list([
        'auto',
        'speed_1',
        'speed_2',
        'speed_3',
        'speed_4',
        'speed_5',
      ]),
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'swing_horizontal_modes': list([
        'auto',
        'swing',
        'left',
        'left_centre',
        'centre',
        'right_centre',
        'right',
      ]),
      'swing_modes': list([
        'auto',
        'swing',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
        'position_5',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_room_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'melcloud_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 937>,
    'translation_key': 'ata_unit',
    'unique_id': 'ata-unit-uuid-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_platform[climate.living_room_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 20.0,
      'fan_mode': 'auto',
      'fan_modes': list([
        'auto',
        'speed_1',
        'speed_2',
        'speed_3',
        'speed_4',
        'speed_5',
      ]),
      'friendly_name': 'Living Room AC',
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      'max_temp': 35,
      'min_temp': 7,
      'supported_features': <ClimateEntityFeature: 937>,
      'swing_horizontal_mode': 'centre',
      'swing_horizontal_modes': list([
        'auto',
        'swing',
        'left',
        'left_centre',
        'centre',
        'right_centre',
        'right',
      ]),
      'swing_mode': 'auto',
      'swing_modes': list([
        'auto',
        'swing',
        'position_1',
        'position_2',
        'position_3',
        'position_4',
        'position_5',
      ]),
      'temperature': 21.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_room_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
